[package]
name = "shells"
version = "0.1.0"
edition = "2021"
authors = ["liutao.rs <liutao.rs@bytedance.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "execute in the shell"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
